team bug squished

--- a/globaal - css/nav.css
+++ b/globaal - css/nav.css
@@ -1,6 +1,6 @@
 .nav-container {
 	display: flex;
-    padding: 10px;
+	padding: 10px;
 	margin-top: 40px;
 	margin-left: 50px;
 }
@@ -14,10 +14,10 @@
 	color: #2d2d2d;
 }
 .nav-item a:hover {
-	color: #EF4F15;
+	color: #ef4f15;
 }
 a.orange {
-	color :#EF4F15;
+	color: #ef4f15;
 }
 #active {
 	color: #ef4f15;
@@ -28,56 +28,56 @@ a.orange {
 	transition: 0.2s;
 }
 .logo:hover {
-    transform: scale(1.2);
+	transform: scale(1.2);
 	transition: 0.2s;
 }
 
 .hamburger-menu {
-    display: none;
-    font-size: 24px;
-    cursor: pointer;
+	display: none;
+	font-size: 24px;
+	cursor: pointer;
 }
 
 .mobile-menu {
-    display: none;
+	display: none;
 }
 @media screen and (max-width: 648px) {
 	.hamburger-menu {
-        display: block;
-        font-size: 50px;
-        cursor: pointer;
-    }
+		display: block;
+		font-size: 50px;
+		cursor: pointer;
+	}
 
-    .nav-item li {
+	.nav-item li {
 		display: none;
 	}
 
-    .mobile-menu {
-        display: block;
-        position: fixed;
-        top: 100px;
-        left: 0;
-        width: 100%;
-        text-align:end;
-        z-index: 1000;
-    }
+	.mobile-menu {
+		display: block;
+		position: fixed;
+		top: 100px;
+		left: 0;
+		width: 100%;
+		text-align: end;
+		z-index: 1000;
+	}
 
-    .mobile-menu ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
+	.mobile-menu ul {
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+	}
 
-    .mobile-menu li {
-        display: block;
-        padding: 10px;
-    }
+	.mobile-menu li {
+		display: block;
+		padding: 10px;
+	}
 
-    .mobile-menu a {
-        text-decoration: none;
-        color: black;
-        padding: 5px 10px;
-        border-radius: 7px;
-        transition: background-color 0.5s;
-    }
+	.mobile-menu a {
+		text-decoration: none;
+		color: black;
+		padding: 5px 10px;
+		border-radius: 7px;
+		transition: background-color 0.5s;
+	}
 }
